--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact Us - Latest Online Tools</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/fixes.css">
+    <link rel="stylesheet" href="assets/css/simplified-header.css">
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg">
     <!-- Open Graph tags for social sharing -->
@@ -175,49 +176,15 @@
             <nav class="main-nav">
                 <ul>
                     <li>
-                        <a href="./popular-tools">Popular Tools <span class="dropdown-icon">▾</span></a>
-                        <div class="dropdown-menu dropdown-wide popular-tools-dropdown">
-                            <!-- Tool categories will be dynamically loaded from tools-data.js -->
-                            <div class="dropdown-loading">
-                                <div class="loading-spinner">Loading tools...</div>
-                            </div>
-                            <div class="view-all">
-                                <a href="./popular-tools">View All</a>
-                            </div>
-                        </div>
+                        <a href="./popular-tools">Popular Tools</a>
                     </li>
                     <li>
-                        <a href="all-tools">All Tools <span class="dropdown-icon">▾</span></a>
-                        <div class="dropdown-menu dropdown-wide all-tools-dropdown">
-                            <!-- Tool categories will be dynamically loaded from tools-data.js -->
-                            <div class="dropdown-loading">
-                                <div class="loading-spinner">Loading tools...</div>
-                            </div>
-                            <div class="view-all">
-                                <a href="all-tools">View All</a>
-                            </div>
-                        </div>
+                        <a href="all-tools">All Tools</a>
                     </li>
                 </ul>
             </nav>
         </div>
         <div class="nav-actions">
-            <div class="desktop-search">
-                <form action="#" method="get" class="search-form">
-                    <input type="search" class="search-box" id="desktop-search-input" placeholder="Search tools..." aria-label="Search tools">
-                </form>
-                <div class="search-dropdown search-dropdown-wide" id="desktop-search-dropdown">
-                    <!-- Search results will be dynamically loaded from tools-data.js -->
-                    <div class="search-loading">
-                        <div class="loading-spinner">Loading search results...</div>
-                    </div>
-                </div>
-            </div>
-            <div class="search-icon" id="search-toggle">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M15.5 14h-.79l-.28-.27a6.5 6.5 0 0 0 1.48-5.34c-.47-2.78-2.79-5-5.59-5.34a6.505 6.505 0 0 0-7.27 7.27c.34 2.8 2.56 5.12 5.34 5.59a6.5 6.5 0 0 0 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
-                </svg>
-            </div>
             <button type="button" class="mobile-menu-toggle" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
@@ -225,17 +192,7 @@
             </button>
         </div>
     </div>
-    <div class="mobile-search">
-        <form action="#" method="get" class="search-form">
-            <input type="search" class="search-box" id="mobile-search-input" placeholder="Search tools..." aria-label="Search tools">
-        </form>
-        <div class="search-dropdown" id="mobile-search-dropdown">
-            <!-- Search results will be dynamically loaded from tools-data.js -->
-            <div class="search-loading">
-                <div class="loading-spinner">Loading search results...</div>
-            </div>
-        </div>
-    </div>
+
 </header>
 
     <main>
