other company pages added

--- a/contact.html
+++ b/contact.html
@@ -275,7 +275,7 @@
                     <p>&copy; <span id="current-year">2023</span> Latest Online Tools. All rights reserved.</p>
                 </div>
                 <div class="contact">
-                    <a href="./contact">Connect Us</a>
+                    <a href="./contact">Contact Us</a>
                 </div>
             </div>
         </div>
