--- a/popular-tools.html
+++ b/popular-tools.html
@@ -761,27 +761,32 @@
                 <div class="footer-links">
                     <h4>Popular Tools</h4>
                     <ul id="footer-popular-tools">
-                        <li><a href="#">Loading popular tools...</a></li>
+                        <li><a href="quick-search-pro">Quick Search Pro</a></li>
+                        <li><a href="jpg-to-png">JPG to PNG Converter</a></li>
+                        <li><a href="jpg-to-webp">JPG to WebP Converter</a></li>
+                        <li><a href="jpg-to-pdf">JPG to PDF Converter</a></li>
+                        <li><a href="png-to-jpg">PNG to JPG Converter</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-links">
                     <h4>Resources</h4>
                     <ul>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Use</a></li>
+                        <li><a href="about">About</a></li>
+                        <li><a href="privacy-policy">Privacy Policy</a></li>
+                        <li><a href="terms-of-use">Terms of Use</a></li>
+                        <li><a href="disclaimer">Disclaimer</a></li>
                     </ul>
                 </div>
 
-                <div class="footer-social">
+                <div class="footer-links">
                     <h4>Connect With Us</h4>
-                    <div class="social-icons">
-                        <a href="#" aria-label="Twitter"><svg class="icon" aria-hidden="true"><use xlink:href="#twitter"></use></svg></a>
-                        <a href="#" aria-label="GitHub"><svg class="icon" aria-hidden="true"><use xlink:href="#github"></use></svg></a>
-                        <a href="#" aria-label="LinkedIn"><svg class="icon" aria-hidden="true"><use xlink:href="#linkedin"></use></svg></a>
-                    </div>
+                    <ul>
+                        <li><a href="contact">Contact Us</a></li>
+                        <li><a href="mailto:contact@latestonlinetools.com">Email Us</a></li>
+                        <li><a href="https://facebook.com/latestonlinetools" target="_blank" rel="noopener">Facebook</a></li>
+                        <li><a href="https://instagram.com/latestonlinetools" target="_blank" rel="noopener">Instagram</a></li>
+                    </ul>
                 </div>
             </div>
 
